src/test/deca/context/invalid/SO/assignString.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: Affectation de types incompatibles.
// 
// Historique:
//    cree le 14/01/2022

{
    String x = "Bonjour";
}